@@ -27,9 +27,9 @@ import android.content.Intent;
 import org.geometerplus.fbreader.network.*;
 import org.geometerplus.fbreader.network.tree.*;
 
+import org.geometerplus.android.fbreader.OrientationUtil;
 import org.geometerplus.android.fbreader.network.NetworkLibraryActivity;
 import org.geometerplus.android.fbreader.network.NetworkLibrarySecondaryActivity;
-
 import org.geometerplus.android.util.PackageUtil;
 
 public class OpenCatalogAction extends Action {
@@ -61,7 +61,8 @@ public class OpenCatalogAction extends Action {
 		if (myActivity instanceof NetworkLibraryActivity) {
 			((NetworkLibraryActivity)myActivity).openTree(tree);
 		} else {
-			myActivity.startActivity(
+			OrientationUtil.startActivity(
+				myActivity,
 				new Intent(myActivity.getApplicationContext(), NetworkLibrarySecondaryActivity.class)
 					.putExtra(NetworkLibraryActivity.TREE_KEY_KEY, tree.getUniqueKey())
 			);
